[package]
name = "libsox-sys"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vtavernier/libsox-sys"
homepage = "https://github.com/vtavernier/libsox-sys"
documentation = "https://docs.rs/libsox-sys"
keywords = ["ffi", "bindings", "sox", "audio"]
categories = ["external-ffi-bindings"]
build = "build.rs"
exclude = ["/.travis.yml"]
description = """
Raw FFI bindings to libsox
"""
edition = "2018"

[badges]
travis-ci = { repository = "vtavernier/libsox-sys" }

[dependencies]

[build-dependencies]
bindgen = "0.49.0"

[dev-dependencies]
libc = "0.2.51"
